deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/zyoma/go-url-shortener:latest
          imagePullPolicy: Always
          ports:
            - name: backend
              containerPort: 8080
      imagePullSecrets:
        - name: docker-config-secret
